@@ -10,6 +10,8 @@ git-annex (5.20150114) UNRELEASED; urgency=medium
     made after two LOSTNET messages were received in a row (perhaps due to
     two different network interfaces being brought down).
   * Fix build failure when wget is not installed.
+  * Fix wording of message displayed when unable to get a file that
+    is available in untrusted repositories.
 
  -- Joey Hess <id@joeyh.name>  Tue, 13 Jan 2015 17:03:39 -0400
 
